...
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.paddingLarge
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.spacingMedium
import cz.mendelu.pef.chordsnap.ui.theme.Dimensions.spacingSmall
import kotlinx.coroutines.launch

// TEST TAGS
const val TestTagPracticeCreationTitle = "TestTagPracticeCreationTitle"
const val TestTagPracticeCreationNameField = "TestTagPracticeCreationNameField"
const val TestTagPracticeCreationSaveButton = "TestTagPracticeCreationSaveButton"
const val TestTagPracticeCreationBackButton = "TestTagPracticeCreationBackButton"
const val TestTagPracticeCreationAddFab = "TestTagPracticeCreationAddFab"
const val TestTagPracticeCreationEmptyMessage = "TestTagPracticeCreationEmptyMessage"
const val TestTagPracticeCreationLazyColumn = "TestTagPracticeCreationLazyColumn"
const val TestTagPracticeCreationAddDialogTitle = "TestTagPracticeCreationAddDialogTitle"
const val TestTagPracticeCreationSearchLabel = "TestTagPracticeCreationSearchLabel"
const val TestTagPracticeCreationCancelButton = "TestTagPracticeCreationCancelButton"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun PracticeCreationScreen(
    practiceId: Long?,
    selectedChordIds: List<String>,
...
